--- a/PKMDS-Save-Editor/PKMDS Abstract Test/PKMDS Abstract Test.csproj
+++ b/PKMDS-Save-Editor/PKMDS Abstract Test/PKMDS Abstract Test.csproj
@@ -45,16 +45,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmBoxes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBoxes.Designer.cs">
+      <DependentUpon>frmBoxes.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPKMViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPKMViewer.Designer.cs">
+      <DependentUpon>frmPKMViewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmBoxes.resx">
+      <DependentUpon>frmBoxes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPKMViewer.resx">
+      <DependentUpon>frmPKMViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
