--- a/PKMDS-Save-Editor/PKMDS Abstract Test/PKMDS Abstract Test.csproj
+++ b/PKMDS-Save-Editor/PKMDS Abstract Test/PKMDS Abstract Test.csproj
@@ -88,6 +88,10 @@
       <Link>veekun-pokedex.sqlite</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="..\PKMDS-Save-Editor\Test-Save-White-2.sav">
+      <Link>Test-Save-White-2.sav</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
